Headline colors + fix responsive x-axis overflow

--- a/grails-app/assets/stylesheets/general.scss
+++ b/grails-app/assets/stylesheets/general.scss
@@ -203,6 +203,12 @@ ol.property-list {
       font-size: $font-size-h4;
       font-weight: bold;
     }
+    &.red {
+      color: $color-brick-red;
+    }
+    &.blue {
+      color: $color-header-blue;
+    }
   }
   > main {
     background: white;
